# nailshere

./: .dockerignore  .env_config  .gitignore  DEPLOYMENT.md  Dockerfile  Readme.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_prod.txt
static/3D_nails/: 10th_nail_almond.glb  11th_nail_oval.glb  12th_nail_lipstick.glb  1st_nail_stiletto.glb  2nd_nail_mountain_peak.glb  3rd_nail_edge.glb  4th_nail_rounded.glb  5th_nail_ballerina.glb  6th_nail_flare.glb  7th_nail_natural.glb  8th_nail_square.glb  9th_nail_squoval.glb
static/css/: style.css
static/js/: config-loader.js  hand-tracking.js  mediapipe-hand-tracking.js
templates/: ar_tryon.html  error.html  index.html  result.html
